--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/bio/css/style.css
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/bio/css/style.css
@@ -3,14 +3,105 @@
 *{
     padding: 0;
     font-family: 'Ubuntu', sans-serif;
-    color: #404040;
     font-size: 1em;
     margin: 0;
 }
 
-body{
-    background-color: #f5f5f5;
+a{
+    color: #404040;
+    transition: 0.5s all;
 }
+
+body{
+    background-color: #ededed;
+    color: #404040;
+    transition: 0.5s all;
+}
+
+body.dark-mode{
+    background-color: #404040;
+    color: #ededed;
+}
+
+body.light-mode{
+    background-color: #ededed;
+    color: #404040;
+}
+
+.bar-top{
+    height: 50px;
+}
+
+.back-home{
+    width: 80%;
+    float: left;
+}
+
+.switch-button{
+    width: 0%;
+    float: right;
+}
+
+/*------------Switch Button--------------*/
+
+.switch{
+    position: relative;/*
+    margin-left: -9999px;*/
+    visibility: hidden; 
+}
+
+.switch + label{
+    display: block;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    user-select: none;
+}
+
+.switch-shadow + label{
+    padding: 2px;
+    width: 60px;
+    height: 30px;
+    background-color: #404040;
+    border-radius: 30px;
+}
+
+.switch-shadow + label:before,
+.switch-shadow + label:after{
+    display: block;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    bottom: 1px;
+    content: "";
+}
+
+.switch-shadow + label:before{
+    right: 1px;
+    background-color: #f1f1f1;
+    border-radius: 30px;
+    transition: all 0.4s;
+}
+
+.switch-shadow + label:after{
+    width: 30px;
+    right: 1px;
+    background-color: #404040;
+    border-radius: 100%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition: all 0.4s;
+}
+
+.switch-shadow:checked + label:before{
+    background-color: #f1f1f1;
+}
+
+.switch-shadow:checked + label:after{
+    transform: translateX(32px);
+    background-color: #afafaf;
+}
+
+/*--------------------------------------*/
 
 a:link{
     text-decoration: none;
@@ -51,6 +142,7 @@ a:link{
 .container{
     width: 70%;
     margin: auto;
+    padding-top: 15px;
 }
 
 .education, .projects, 
@@ -68,8 +160,9 @@ a:link{
 }
 
 main{
-    padding-bottom: 30px;
-    padding-top: 20px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    margin-bottom: 5px;
 }
 
 .img-fluid{
@@ -108,7 +201,7 @@ main{
         color: #000000;
     }
 
-    .back-home{
+    .bar-top{
         display: none;
     }
 
@@ -125,8 +218,9 @@ main{
         float: right;
         width: 65%;
         border-left: #000000 3px solid;
-        padding-left: 20px;
-        padding-bottom: 0;
+        margin-bottom: 0px;
+        padding: 0px 20px 0px;
+        
     }
 
     .bio, .contact{
